--- a/resources/css/headers.css
+++ b/resources/css/headers.css
@@ -1,138 +1,97 @@
-body,
-html {
-  height: auto;
-  width: 100%;
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
-
+/* Base styles */
 .outer-grid-container {
-  box-sizing: border-box;
-  width: 100%;
-  padding: 0.5rem;
-  display: grid;
-  grid-template-columns: 2fr 7fr;
-  background-color: #562929;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #333; /* Example background color */
+  color: white;
+  padding: 0 20px;
 }
 
 .logo-container {
   display: flex;
   align-items: center;
-  justify-content: center;
+}
+
+.logo-container img {
+  margin-right: 10px;
 }
 
 .name {
-  font-size: larger;
-  font-weight: 600;
-  color: white;
-  margin-left: 7rem;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 .container {
-  width: 100%;
   display: flex;
-  justify-content: end;
-  align-items: center;
+  justify-content: flex-end;
 }
 
-.content {
-  width: 150px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin-left: 30px;
-}
-
-.reg-content {
-  width: 300px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 2fr;
-  align-items: center;
-  justify-content: end;
-  margin-left: 10px;
-}
-
-a {
-  color: white;
-  text-decoration: none;
-}
-
-.profile-img {
-  height: 40px;
-  width: auto;
-  cursor: pointer;
-}
-
-.nav-img {
-  height: 25px;
-  width: auto;
-  cursor: pointer;
+.menu {
+  display: flex;
 }
 
 .topnav-item {
-  padding-inline: 10px;
+  text-decoration: none;
+  color: white;
+  padding: 10px 15px;
 }
 
 .topnav-item:hover {
-  color: gray;
+  background-color: #555;
 }
 
 .unreg-log {
-  color: #e74c3c;
-}
-
-.unreg-log:hover {
-  color: #e74d3c8f;
-}
-
-#logo {
-  cursor: pointer;
+  text-decoration: none;
+  color: white;
+  padding: 10px 15px;
+  background-color: #e74c3c;
+  border-radius: 4px;
   margin-left: 20px;
 }
 
-.popup-container {
-  position: relative;
-  z-index: 1;
+.unreg-log:hover {
+  background-color: #c0392b;
 }
 
-.popup-menu-1 {
-  display: none;
-  position: absolute;
-  top: 100%;
-  right: 0;
-  background-color: #fff;
-  border: 1px solid #ccc;
+/* Media queries for responsive design */
+@media (max-width: 768px) {
+  .outer-grid-container {
+      flex-direction: column;
+  }
+
+  .logo-container {
+      justify-content: center;
+      margin-bottom: 10px;
+  }
+
+  .container {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .menu {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .topnav-item,
+  .unreg-log {
+      width: 100%;
+      text-align: center;
+  }
 }
 
-.popup-menu-2 {
-  display: none;
-  position: absolute;
-  top: 100%;
-  right: 0;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  width: 200px;
-  padding: 10px;
-}
+@media (max-width: 480px) {
+  .name {
+      display: none; /* Hide the name on very small screens */
+  }
+  
+  .logo-container img {
+      margin: 0 auto; /* Center logo on small screens */
+  }
 
-.popup-container ul {
-  list-style: none;
-  width: 200px;
-  padding: 0;
-  margin: 0;
-}
-
-.popup-container li {
-  padding: 10px;
-  cursor: pointer;
-}
-
-.popup-container li:hover {
-  background-color: whitesmoke;
-}
-
-.popup-container a {
-  text-decoration: none;
-  color: #333;
-  font-size: 19px;
-  margin-left: 10px;
+  .menu {
+      width: 100%;
+  }
 }
