--- a/resources/css/product_list.css
+++ b/resources/css/product_list.css
@@ -40,7 +40,7 @@ html {
 /* Style the links */
 .nav-link {
   text-decoration: none;
-  background-color: gray;
+  background-color: rgb(145, 92, 92);
   color: white;
   width: 100%;
   height: 4rem;
